src/main/default/objects/Checklist_Step__c/Checklist_Step__c.object-meta.xml
<CustomObject>
    <label>Checklist Step</label>
    <nameField>
        <label>Checklist Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>