src/main/default/objects/Checklist_Step__c/fields/Checklist__c.field-meta.xml
<CustomField>
    <fullName>Checklist__c</fullName>
    <inlineHelpText>Checklist on which the step displays.</inlineHelpText>
    <label>Checklist</label>
    <referenceTo>Checklist__c</referenceTo>
    <relationshipLabel>Checklist Steps</relationshipLabel>
    <relationshipName>Checklist_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>