src/main/default/objects/Checklist_Step__c/fields/Required_Step__c.field-meta.xml
<CustomField>
    <fullName>Required_Step__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, users must mark the step complete on the checklist before they can complete a ticket.</inlineHelpText>
    <label>Required Step</label>
    <type>Checkbox</type>
</CustomField>