src/main/default/objects/Checklist_Step__c/fields/Screen__c.field-meta.xml
<CustomField>
    <fullName>Screen__c</fullName>
    <inlineHelpText>Tab on the Tickets page in FieldFX Mobile that displays when a user selects the step on a checklist.</inlineHelpText>
    <label>Screen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ticket/{trackingNumber}?tab=details</fullName>
            </value>
            <value>
                <fullName>ticket/{trackingNumber}?tab=log</fullName>
            </value>
            <value>
                <fullName>ticket/{trackingNumber}?tab=items</fullName>
            </value>
            <value>
                <fullName>ticket/{trackingNumber}?tab=reports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>