src/main/default/objects/Checklist_Step__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number used to determine the position of the step on a checklist. For example, "5.0000" indicates the step is the fifth step on a checklist.</inlineHelpText>
    <label>Sequence Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>